# HtProtocol

./: CMakeLists.txt  README.md
src/: HtProtocol.c  HtProtocol.cpp  HtProtocol.h  HtProtocolConfig.h  config.h  read.cpp  reader.c  reader.cpp  send.cpp  sender.c  sender.cpp  val_data.c  val_data.cpp  val_data.h
tests/: CMakeLists.txt  client.cpp  client_drop.cpp  main.cpp  sender.cpp  sender_drop.cpp
